fix: 🐛 fixed alpine load flicker

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -19,3 +19,7 @@ footer {
     grid-row-start: 3;
     grid-row-end: 4;
 }
+
+[x-cloak] {
+    display: none !important;
+}
